# OATS-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  PERFORMANCE_ANALYSIS.md  README.md  architecture.mmd  diagram.mmd  run_examples.sh  test_example.rs
benches/: oats_benchmarks.rs  simple_benchmark.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/business/: Cargo.toml
examples/business/src/: main.rs
examples/game/: Cargo.toml
examples/game/src/: main.rs
src/: actions.rs  error.rs  lib.rs  objects.rs  systems.rs  traits.rs
