[package]
name = "oats"
version = "0.1.0"
edition = "2021"
authors = ["OATS Team"]
description = "Universal architecture pattern for infinite scale across any domain"
license = "MIT"
repository = "https://github.com/your-org/OATS-rs"
keywords = ["architecture", "patterns", "scalable", "domain-driven"]
categories = ["architecture", "patterns"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
criterion = "0.5"
futures = "0.3"

[[bench]]
name = "oats_benchmarks"
harness = false

[[example]]
name = "basic"
path = "examples/basic/src/main.rs"

[[example]]
name = "business"
path = "examples/business/src/main.rs"

[[bin]]
name = "test_example"
path = "test_example.rs"

[workspace]
members = [
    "examples/basic",
    "examples/business",
    "examples/game"
] 