[package]
name = "oats-framework"
version = "0.1.0"
edition = "2021"
description = "Universal architecture pattern for infinite scale across any domain - Objects • Actions • Traits • Systems"
license = "MIT"
repository = "https://github.com/TheNexusGroup/OATS-rs"
homepage = "https://github.com/TheNexusGroup/OATS-rs"
documentation = "https://docs.rs/oats-framework"
readme = "README.md"
keywords = ["oats", "architecture", "framework", "async", "scalable"]
categories = ["asynchronous", "data-structures", "game-development", "web-programming", "api-bindings"]
authors = ["Richard Christopher dev@ancillary.enterprises>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
criterion = "0.5"
futures = "0.3"

[[bench]]
name = "oats_benchmarks"
harness = false

[[example]]
name = "basic"
path = "examples/basic/src/main.rs"

[[example]]
name = "business"
path = "examples/business/src/main.rs"

[[bin]]
name = "test_example"
path = "test_example.rs"

[workspace]
members = [
    "examples/basic",
    "examples/business",
    "examples/game"
] 